<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/menu_sign_in"
        android:title="@string/sign_in"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_sign_out"
        android:title="@string/sign_out"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_leaderboard"
        android:title="@string/leaderboards"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_achievements"
        android:title="@string/achievements"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
